--- a/src/index.html
+++ b/src/index.html
@@ -25,16 +25,9 @@
     <link rel="stylesheet" href="./sass/index.scss" />
   </head>
   <body>
-    <load ="partials/header.html" />
-
-    <section>
-      <h1>Lorem ipsum dolor sit amet.</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+    <main class="container">
+      <load ="partials/table.html" />
+    </main>
 
     <script type="module" src="/main.js"></script>
   </body>
