--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
   <body>
     <main class="container">
       <load ="partials/table.html" />
-      <load ="partials/button.html" />
+      <load ="partials/options.html" />
     </main>
 
     <script type="module" src="/main.js"></script>
