--- a/src/index.html
+++ b/src/index.html
@@ -23,13 +23,12 @@
     <link rel="manifest" href="./favicon/site.webmanifest" />
     <title>Radency Test</title>
     <link rel="stylesheet" href="./sass/index.scss" />
+    <script type="module" src="/main.js"></script>
   </head>
   <body>
     <main class="container">
-      <load ="partials/table.html" />
-      <load ="partials/options.html" />
+      <load ="partials/mainTable.html" />
+      <load ="partials/button.html" />
     </main>
-
-    <script type="module" src="/main.js"></script>
   </body>
 </html>
