add modal + summary table

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,10 @@
     <main class="container">
       <load ="partials/mainTable.html" />
       <load ="partials/button.html" />
+      <load ="partials/summaryTable.html" />
+      <load ="partials/modal.html" />
     </main>
+
+    <script src="./js/modal.js"></script>
   </body>
 </html>
