--- a/src/index.html
+++ b/src/index.html
@@ -30,9 +30,12 @@
       <load ="partials/mainTable.html" />
       <load ="partials/button.html" />
       <load ="partials/summaryTable.html" />
-      <load ="partials/modal.html" />
+      <load ="partials/modalCreate.html" />
+
+      <!-- Overlay for modal window -->
+      <div class="overlay js-overlay-modal"></div>
     </main>
 
-    <script src="./js/modal.js"></script>
+    <script type="module" src="./js/modal.js"></script>
   </body>
 </html>
