--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
       <load ="partials/button.html" />
       <load ="partials/summaryTable.html" />
       <load ="partials/modalCreate.html" />
+      <load ="partials/modalEdit.html" />
 
       <!-- Overlay for modal window -->
       <div class="overlay js-overlay-modal"></div>
