add archive logic + manager tables

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
   <body>
     <main class="container">
       <load ="partials/mainTable.html" />
-      <load ="partials/button.html" />
+      <load ="partials/tableManager.html" />
       <load ="partials/summaryTable.html" />
       <load ="partials/modalCreate.html" />
       <load ="partials/modalEdit.html" />
